--- a/src/views/sample.ejs
+++ b/src/views/sample.ejs
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    hello hh with ejs 1234
+    hello hh with ejs 1234dsvjafidpgai
     <div>
         <img src="/images/a.jpg"/>
     </div>
