--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -35,36 +35,32 @@
         <li><a href="/create">Create User</a></li>
       </ul>
   <div class="table-container">
+    <!-- <%= JSON.stringify(listUsers) %> -->
     <div class="title">List users</div>
 
       <table class="w3-table-all">
         <thead>
           <tr class="w3-light-grey">
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Points</th>
+            <th>Index</th>
+            <th>Name</th>
+            <th>Email</th>
+            <th>City</th>
+            <th>Actions</th>
+
           </tr>
         </thead>
+        <% listUsers.forEach(function(user, index) { %>
         <tr>
-          <td>Jill</td>
-          <td>Smith</td>
-          <td>50</td>
+          <td><%= index + 1 %></td>
+          <td><%= user.name %></td>
+          <td><%= user.email %></td>
+          <td><%= user.city %></td>
+          <td>
+            <button><a href= "/update/<%= index + 1 %>">Edit</a></button>
+            <button>Delete</button>
+          </td>
         </tr>
-        <tr>
-          <td>Eve</td>
-          <td>Jackson</td>
-          <td>94</td>
-        </tr>
-        <tr>
-          <td>Adam</td>
-          <td>Johnson</td>
-          <td>67</td>
-        </tr>
-        <tr>
-          <td>Bo</td>
-          <td>Nilson</td>
-          <td>35</td>
-        </tr>
+        <% }) %>
       </table>
   </div>
 </body>
