--- a/src/views/update.ejs
+++ b/src/views/update.ejs
@@ -19,11 +19,11 @@
             <fieldset>
               <legend>Update a user:</legend>
               <label for="name">Name:</label>
-              <input type="text" id="name" name="name"><br><br>
+              <input type="text" id="name" name="name" value="<%= user.name %>"><br><br>
               <label for="email">Email:</label>
-              <input type="email" id="email" name="email"><br><br>
+              <input type="email" id="email" name="email" value="<%= user.email %>"><br><br>
               <label for="email">City:</label>
-              <input type="city" id="city" name="city"><br><br>
+              <input type="city" id="city" name="city" value="<%= user.city %>"><br><br>
              
               <input type="submit" value="Update">
             </fieldset>
