--- a/src/views/update.ejs
+++ b/src/views/update.ejs
@@ -18,12 +18,25 @@
         <form action="/update-user" method="POST"> 
             <fieldset>
               <legend>Update a user:</legend>
-              <label for="name">Name:</label>
-              <input type="text" id="name" name="name" value="<%= user.name %>"><br><br>
-              <label for="email">Email:</label>
-              <input type="email" id="email" name="email" value="<%= user.email %>"><br><br>
-              <label for="email">City:</label>
-              <input type="city" id="city" name="city" value="<%= user.city %>"><br><br>
+              <div class="input-group d-none" >
+                <label>User Id:</label>
+                <input type="text" id="userId" name="userId" value="<%= user.id %>"><br><br>
+              </div>
+
+              <div class="input-group">
+                <label></label>Name:</label>
+                <input type="text" id="name" name="name" value="<%= user.name %>"><br><br>
+              </div>
+
+              <div class="input-group">
+                <label">Email:</label>
+                <input type="email" id="email" name="email" value="<%= user.email %>"><br><br>
+              </div>
+
+              <div class="input-group">
+                <label>City:</label>
+                <input type="city" id="city" name="city" value="<%= user.city %>"><br><br>
+              </div>
              
               <input type="submit" value="Update">
             </fieldset>
